# obs-shaderfilter

./: CMakeLists.txt  README.md
src/: obs-shaderfilter.c
